--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="mb-4">
+          <div class="mb-4 esy-img-div">
             <img src="./images/easy.svg" alt="" />
           </div>
           <h3 class="pt-4 content-sub-heading">Simple and easy</h3>
@@ -192,7 +192,7 @@
         </div>
         <div class="col-md-4">
           <div class="safe-img-div">
-            <img src="./images/safe.svg" alt="" />
+            <img class="safe-img" src="./images/safe.svg" alt="" />
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
         </div>
         <div class="col-md-6">
           <div class="phone-img-div">
-            <img src="./images/phone.svg" alt="" />
+            <img class="phone-img" src="./images/phone.svg" alt="" />
           </div>
         </div>
       </div>
@@ -235,7 +235,7 @@
               with minimal risk on your investment.
             </p>
           </div>
-          <div class="col-md-6 pl-5">
+          <div class="col-md-6 stake-div pl-5">
             <h3>Stakings</h3>
             <p class="instru-content" style="line-height: 2.5rem">
               Earn upto 30% APY* by staking your tokens. By staking you provide
@@ -272,7 +272,7 @@
               <h3 class="mt-4 web-heading">Website nightmode initiated</h3>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 card-news-one">
             <div class="cards-news p-3">
               <div>
                 <span class="date">13 feb 21</span>
@@ -289,7 +289,7 @@
               </h3>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 card-news-two">
             <div class="cards-news p-3">
               <div>
                 <span class="date">13 Jan 21</span>
@@ -337,7 +337,7 @@
            </div>
 
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 connect-div">
             <h3>Connect with us</h3>
 
             <div class="mt-4">Telegram</div>
@@ -350,7 +350,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 d-flex justify-content-end">
+      <div class="col-md-6 d-flex justify-content-end white-logo-div">
         <img class="white-logo" src="./images/white-logo.svg" alt="white-logo" >
       </div>
       </div>
