--- a/meet.html
+++ b/meet.html
@@ -112,7 +112,7 @@
     <!-- main section starts here -->
     <section class="main-section">
       <div class="first-item">
-        <div class="row">
+        <div class="row meet-row">
           <div class="col-md-1 px-0" style="max-width: fit-content">
             <span><img src="./images/user.svg" alt="" /></span>
           </div>
@@ -151,7 +151,7 @@
       <div class="second-item">
         <div class="grid-container">
           <div class="second-one">
-            <div class="row">
+            <div class="row meet-row">
               <div class="col-md-1 px-0" style="max-width: fit-content">
                 <span><img src="./images/user.svg" alt="" /></span>
               </div>
@@ -187,7 +187,7 @@
           </div>
 
           <div class="second-two">
-            <div class="row">
+            <div class="row meet-row">
               <div class="col-md-1 px-0" style="max-width: fit-content">
                 <span><img src="./images/user.svg" alt="" /></span>
               </div>
@@ -230,7 +230,7 @@
       <div class="second-item">
         <div class="grid-container">
           <div class="second-one">
-            <div class="row">
+            <div class="row meet-row">
               <div class="col-md-1 px-0" style="max-width: fit-content">
                 <span><img src="./images/user.svg" alt="" /></span>
               </div>
@@ -257,7 +257,7 @@
           </div>
 
           <div class="second-two">
-            <div class="row">
+            <div class="row meet-row">
               <div class="col-md-1 px-0" style="max-width: fit-content">
                 <span><img src="./images/user.svg" alt="" /></span>
               </div>
