--- a/meet.html
+++ b/meet.html
@@ -5,6 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,500;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@100;200;300;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./meet.css" />
     <link
       rel="stylesheet"
@@ -146,8 +163,6 @@
         </div>
       </div>
 
-
-
       <div class="second-item">
         <div class="grid-container">
           <div class="second-one">
@@ -163,26 +178,38 @@
             </div>
 
             <div class="text-div mt-4">
-                <p style="line-height: 2rem">
-                    Sam has started to get interested in cryptocurrencies in 2017, as the years went 
-                    on continued to remain interested in the space throughout the bear market. During early-2020, 
-                    he started to immerse himself into the world of Decentralised Finance. Quickly realising 
-                    the potential of DeFi had to radically transform the financial system to benefit everyone
-                     that participates in it, not just the rich and powerful. To raise awareness of the 
-                     potential of DeFi for newcomers, 
-                    Sam has also started a blog DeFi Dive: 
-                    <a style=" color: #848D9C; border-bottom: 1px solid #848D9C; text-decoration: none;" href="">https://defidive.medium.com/</a>
-                </p>
+              <p style="line-height: 2rem">
+                Sam has started to get interested in cryptocurrencies in 2017,
+                as the years went on continued to remain interested in the space
+                throughout the bear market. During early-2020, he started to
+                immerse himself into the world of Decentralised Finance. Quickly
+                realising the potential of DeFi had to radically transform the
+                financial system to benefit everyone that participates in it,
+                not just the rich and powerful. To raise awareness of the
+                potential of DeFi for newcomers, Sam has also started a blog
+                DeFi Dive:
+                <a
+                  style="
+                    color: #848d9c;
+                    border-bottom: 1px solid #848d9c;
+                    text-decoration: none;
+                  "
+                  href=""
+                  >https://defidive.medium.com/</a
+                >
+              </p>
 
-                <p class="mt-4" style="line-height: 2rem">
-                    In November of 2020, Sam joined the Axia community and as time went on wanted to help 
-                    bring awareness to the potential of Axia, especially to newcomers to DeFi and crypto. 
-                    One of the key use-cases of Axia is that it's able to simplify investing into crypto 
-                    for newcomers without requiring in-depth knowledge on various projects. By investing 
-                    into the Axia index pools, one can invest simply into various proven projects with a 
-                    few clicks and earn passive income 
-                    along the way. Sam's goal is to help make newcomers to DeFi and crypto aware of this
-                </p>
+              <p class="mt-4" style="line-height: 2rem">
+                In November of 2020, Sam joined the Axia community and as time
+                went on wanted to help bring awareness to the potential of Axia,
+                especially to newcomers to DeFi and crypto. One of the key
+                use-cases of Axia is that it's able to simplify investing into
+                crypto for newcomers without requiring in-depth knowledge on
+                various projects. By investing into the Axia index pools, one
+                can invest simply into various proven projects with a few clicks
+                and earn passive income along the way. Sam's goal is to help
+                make newcomers to DeFi and crypto aware of this
+              </p>
             </div>
           </div>
 
@@ -197,35 +224,33 @@
                 <span class="founder">FOUNDER</span>
               </div>
             </div>
- 
 
-         <div class="text-div mt-4">
-             <p style="line-height: 2rem">
-                 Yourfacemyfoot is a lifelong martial artist on the journey of becoming a practicing 
-                 medical doctor. He began martial arts at the age of 3, instructing and mentoring students 
-                 in his teenage years, and eventually becoming a world champion competitor. Eventually, 
-                 his skill of overseeing martial arts studios bridged into his creation of a digital 
-                 marketing agency supporting businesses and organizations across the USA. 
-                 This understanding of marketing tactics and business fundamentals became even more 
-                 valuable as he became enthralled with trading stocks and investing in cryptocurrencies 
-                 in 2017. In more recent years, and to add another spice to his mix, 
-                 he committed to the arduous, yet rewarding journey of helping others in a vastly 
-                 different form from his previous ventures: medicine. Alongside this pursuit, he is 
-                 leading his own research study on the link between Alzheimer's Disease and Down Syndrome. 
-                 You can find @yourfacemyfoot surfing the Pacific and DeFi waves, running in the southern 
-                 California mountains, off-roading in the Mojave Desert, and caring for patients in local 
-                 hospitals. 
-                 One day, you will find him both in the operating rooms and the board rooms.
-             </p>
-         </div>
-
-
+            <div class="text-div mt-4">
+              <p style="line-height: 2rem">
+                Yourfacemyfoot is a lifelong martial artist on the journey of
+                becoming a practicing medical doctor. He began martial arts at
+                the age of 3, instructing and mentoring students in his teenage
+                years, and eventually becoming a world champion competitor.
+                Eventually, his skill of overseeing martial arts studios bridged
+                into his creation of a digital marketing agency supporting
+                businesses and organizations across the USA. This understanding
+                of marketing tactics and business fundamentals became even more
+                valuable as he became enthralled with trading stocks and
+                investing in cryptocurrencies in 2017. In more recent years, and
+                to add another spice to his mix, he committed to the arduous,
+                yet rewarding journey of helping others in a vastly different
+                form from his previous ventures: medicine. Alongside this
+                pursuit, he is leading his own research study on the link
+                between Alzheimer's Disease and Down Syndrome. You can find
+                @yourfacemyfoot surfing the Pacific and DeFi waves, running in
+                the southern California mountains, off-roading in the Mojave
+                Desert, and caring for patients in local hospitals. One day, you
+                will find him both in the operating rooms and the board rooms.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-
-
-
 
       <div class="second-item">
         <div class="grid-container">
@@ -236,23 +261,24 @@
               </div>
               <div class="col-md-9 line-through-div-two">
                 <span class="dev-name-one">Shane </span>
-                <span style="color: #e84d51" class="mail">@dropbear_dad</span><br />
+                <span style="color: #e84d51" class="mail">@dropbear_dad</span
+                ><br />
                 <span class="founder">SOCIAL MEDIA</span>
               </div>
             </div>
 
             <div class="text-div mt-4">
-                <p style="line-height: 2rem">
-                   Shane advocates for making crypto safer and more adaptable to the common person. 
-                   He is an early investor in Axia and believes Axia aligns with his values perfectly. 
-                   Since his involvement he has brought to Axia creativity and his experience as an 
-                   early investor in cryptocurrencies. 
+              <p style="line-height: 2rem">
+                Shane advocates for making crypto safer and more adaptable to
+                the common person. He is an early investor in Axia and believes
+                Axia aligns with his values perfectly. Since his involvement he
+                has brought to Axia creativity and his experience as an early
+                investor in cryptocurrencies.
+              </p>
 
-                </p>
-
-                <p class="mt-4" style="line-height: 2rem">
-                    This includes marketing and all the memes you want.
-                </p>
+              <p class="mt-4" style="line-height: 2rem">
+                This includes marketing and all the memes you want.
+              </p>
             </div>
           </div>
 
@@ -263,75 +289,72 @@
               </div>
               <div class="col-md-9 line-through-div-three">
                 <span class="dev-name-two">Zee </span>
-                <span style="color: #e84d51" class="mail">@Zeenosama</span><br />
+                <span style="color: #e84d51" class="mail">@Zeenosama</span
+                ><br />
                 <span class="founder">PROJECT LEAD</span>
               </div>
             </div>
- 
 
-         <div class="text-div mt-4">
-             <p style="line-height: 2rem">
-                 With a background in Medicine, Zee has a lifelong passion in business and finance. Since 
-                 he reached the legal young age, Zee has been investing in capital markets building a 
-                 sizeable share portfolio to which he entered the top 10 shareholders for multiple publicly 
-                 listed companies. His experience in the field includes some ventures with activist 
-                 investing which saw him lead multiple shareholder actions and the garnering of support 
-                 from cornerstone investors valued in the billions to support said action to force action 
-                 within the companies board. During this period, Zee ventured into cryptocurrencies in early 
-                 2017 - initially considering digital currencies a speculative asset class. Since then his train of thought has changed with experience. Now enlightened to the merits of the transparent and immutable blockchain - Zee is a firm proponent of the real world merits 
-                 and applications blockchain technology can bring to the world.
-             </p>
-         </div>
-
-
+            <div class="text-div mt-4">
+              <p style="line-height: 2rem">
+                With a background in Medicine, Zee has a lifelong passion in
+                business and finance. Since he reached the legal young age, Zee
+                has been investing in capital markets building a sizeable share
+                portfolio to which he entered the top 10 shareholders for
+                multiple publicly listed companies. His experience in the field
+                includes some ventures with activist investing which saw him
+                lead multiple shareholder actions and the garnering of support
+                from cornerstone investors valued in the billions to support
+                said action to force action within the companies board. During
+                this period, Zee ventured into cryptocurrencies in early 2017 -
+                initially considering digital currencies a speculative asset
+                class. Since then his train of thought has changed with
+                experience. Now enlightened to the merits of the transparent and
+                immutable blockchain - Zee is a firm proponent of the real world
+                merits and applications blockchain technology can bring to the
+                world.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-
-
     </section>
     <!-- main section ends here -->
 
-    <!-- axia footer section starts here -->
+     <!-- axia footer section starts here -->
     <footer>
       <div class="row">
-        <div class="col-md-6">
-          <div class="row">
-            <div class="col-md-6">
-              <h3>Navigate</h3>
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-6">
+            <h4>Navigate</h4>
 
-              <div class="mt-4">
-                <div>Support</div>
-                <div>About Us</div>
-                <div>Company News</div>
-                <div>Invest</div>
-                <div>Developer</div>
-                <div>Community</div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <h3>Connect with us</h3>
+           <div class="mt-4">
+              <div class="foot-item">Support</div>
+             <div class="foot-item">About Us</div>
+              <div class="foot-item">Company News</div>
+              <div class="foot-item">Invest</div>
+              <div class="foot-item">Developer</div>
+              <div class="foot-item">Community</div>
+           </div>
 
-              <div class="mt-4">Telegram</div>
-              <div>Twitter</div>
-              <div class="mb-5">Dischord</div>
+          </div>
+          <div class="col-md-6 connect-div">
+            <h4>Connect with us</h4>
 
-              <hr />
+            <div class="mt-4 foot-item">Telegram</div>
+             <div class="foot-item">Twitter</div>
+              <div class="mb-5 foot-item">Dischord</div>
 
-              <span style="color: #f25e66"
-                >Axia Terms and Condition <br />
-                Privacy</span
-              >
-            </div>
+               <hr>
+
+              <span class="foot-item" style="color: #F25E66">Axia Terms and Condition <br> Privacy</span>           
           </div>
         </div>
-        <div class="col-md-6 d-flex justify-content-end">
-          <img
-            class="white-logo"
-            src="./images/white-logo.svg"
-            alt="white-logo"
-          />
-        </div>
+      </div>
+      <div class="col-md-6 d-flex justify-content-end white-logo-div">
+        <img class="white-logo" src="./images/white-logo.svg" alt="white-logo" >
+      </div>
       </div>
     </footer>
     <!-- axia footer section ends here -->
