--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
-    <link
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@100;200;300;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300;500&display=swap" rel="stylesheet">    
+<link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
+
   </head>
   <body>
     <!-- navbar section starts -->
@@ -40,7 +42,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="#"
-              >Invest<span class="sr-only">(current)</span></a
+              >INVEST<span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item dropdown">
@@ -183,7 +185,7 @@
           <h3 style="color: #f25e66">Safe</h3>
           <p class="mt-4 rest-content">
             Rest easy knowing your investment is safe! Each token is put through
-            a <br />
+            a 
             stringent venting process before they are addedto our funds. <br />
             Even Axia itself has been through stringest vetting through multiple
             <br />
@@ -211,7 +213,7 @@
             letting their currencies work smarter.
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" style="width: fit-content; height: fit-content;">
           <div class="phone-img-div">
             <img class="phone-img" src="./images/phone.svg" alt="" />
           </div>
@@ -227,7 +229,7 @@
 
         <div class="row instru-row">
           <div class="col-md-6 pr-5">
-            <h3>Axia Funds</h3>
+            <h3 style="color: rgba(28, 41, 59, 1);"><b>Axia Funds</b></h3>
             <p class="instru-content" style="line-height: 2.5rem">
               Automatically diversify your portfolio into funds with a press of
               a button. Each fund is carefully arranged by our team who
@@ -236,7 +238,7 @@
             </p>
           </div>
           <div class="col-md-6 stake-div pl-5">
-            <h3>Stakings</h3>
+            <h3 style="color: rgba(28, 41, 59, 1); font-weight: 600;"><b>Stakings</b></h3>
             <p class="instru-content" style="line-height: 2.5rem">
               Earn upto 30% APY* by staking your tokens. By staking you provide
               additional liquidity nd earn daily 'emissions' for doing so!
@@ -314,7 +316,7 @@
     <!-- axia button section ends here -->
     <section class="btn-news-section">
       <div class="meet-btn-div">
-        <a href="./meet.html" class="btn btn-meet mt-3">meet the team</a>
+        <a href="./meet.html" class="btn btn-meet mt-3">Meet the team</a>
       </div>
     </section>
     <!-- axia button section ends here -->
@@ -325,28 +327,28 @@
       <div class="col-md-6">
         <div class="row">
           <div class="col-md-6">
-            <h3>Navigate</h3>
+            <h4>Navigate</h4>
 
            <div class="mt-4">
-              <div>Support</div>
-             <div>About Us</div>
-              <div>Company News</div>
-              <div>Invest</div>
-              <div>Developer</div>
-              <div>Community</div>
+              <div class="foot-item">Support</div>
+             <div class="foot-item">About Us</div>
+              <div class="foot-item">Company News</div>
+              <div class="foot-item">Invest</div>
+              <div class="foot-item">Developer</div>
+              <div class="foot-item">Community</div>
            </div>
 
           </div>
           <div class="col-md-6 connect-div">
-            <h3>Connect with us</h3>
+            <h4>Connect with us</h4>
 
-            <div class="mt-4">Telegram</div>
-             <div>Twitter</div>
-              <div class="mb-5">Dischord</div>
+            <div class="mt-4 foot-item">Telegram</div>
+             <div class="foot-item">Twitter</div>
+              <div class="mb-5 foot-item">Dischord</div>
 
                <hr>
 
-              <span style="color: #F25E66">Axia Terms and Condition <br> Privacy</span>           
+              <span class="foot-item" style="color: #F25E66">Axia Terms and Condition <br> Privacy</span>           
           </div>
         </div>
       </div>
