--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@100;200;300;500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300;500&display=swap" rel="stylesheet">    
-<link
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@100;200;300;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&family=Work+Sans:wght@200;300;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-
   </head>
   <body>
     <!-- navbar section starts -->
@@ -110,21 +118,21 @@
     <!-- crypto starts here -->
     <section class="crypto-section">
       <div class="row launch-div">
-        <div class="col-md-5 crypto-div">
+        <div class="col-md-7 crypto-div">
           <h6 class="crypto-heading">
             Cryptocurrency <br />
             investing for everyone
           </h6>
           <p class="mt-4 crypto-content">
-            Axia, the lead in Cryptocurrency indexes gives you the tools to take
-            control of your financies and make your Cryptocurrency work smarter,
+            Axia, the lead in Cryptocurrency indexes gives you the tools <br> to take
+            control of your financies and make your Cryptocurrencies <br> work smarter,
             not harder
           </p>
           <button type="button" class="btn btn-launch mt-3">Launch dApp</button>
         </div>
-        <div class="col-md-7 img-overlay">
+        <div class="col-md-5 img-overlay">
           <div class="computer-img-div">
-            <img class="computer-img" src="./images/Axia 1.svg" alt="" />
+            <img class="computer-img" src="./images/latestcmp.svg" alt="" />
           </div>
         </div>
       </div>
@@ -185,8 +193,8 @@
           <h3 style="color: #f25e66">Safe</h3>
           <p class="mt-4 rest-content">
             Rest easy knowing your investment is safe! Each token is put through
-            a 
-            stringent venting process before they are addedto our funds. <br />
+            a stringent venting process before they are addedto our funds.
+            <br />
             Even Axia itself has been through stringest vetting through multiple
             <br />
             security and code audits.
@@ -213,7 +221,7 @@
             letting their currencies work smarter.
           </p>
         </div>
-        <div class="col-md-6" style="width: fit-content; height: fit-content;">
+        <div class="col-md-6" style="width: fit-content; height: fit-content">
           <div class="phone-img-div">
             <img class="phone-img" src="./images/phone.svg" alt="" />
           </div>
@@ -229,19 +237,21 @@
 
         <div class="row instru-row">
           <div class="col-md-6 pr-5">
-            <h3 style="color: rgba(28, 41, 59, 1);"><b>Axia Funds</b></h3>
-            <p class="instru-content" style="line-height: 2.5rem">
-              Automatically diversify your portfolio into funds with a press of
-              a button. Each fund is carefully arranged by our team who
-              scrutinise each token to ensure you get the best possible return
+            <h3 style="color: rgba(28, 41, 59, 1)"><b>Axia Funds</b></h3>
+            <p class="instru-content mt-4">
+              Automatically diversify your portfolio into <br> funds with a press of
+              a button. Each fund is <br> carefully arranged by our team who
+              scrutinise <br> each token to ensure you get the best possible <br> return
               with minimal risk on your investment.
             </p>
           </div>
           <div class="col-md-6 stake-div pl-5">
-            <h3 style="color: rgba(28, 41, 59, 1); font-weight: 600;"><b>Stakings</b></h3>
-            <p class="instru-content" style="line-height: 2.5rem">
-              Earn upto 30% APY* by staking your tokens. By staking you provide
-              additional liquidity nd earn daily 'emissions' for doing so!
+            <h3 style="color: rgba(28, 41, 59, 1); font-weight: 600">
+              <b>Stakings</b>
+            </h3>
+            <p class="instru-content mt-4" >
+              Earn upto 30% APY* by staking your tokens. <br> By staking you provide
+              additional liquidity and <br> earn daily 'emissions' for doing so!
             </p>
             <small>
               *Apy varies based on the size of the pooled investments within a
@@ -324,37 +334,43 @@
     <!-- axia footer section starts here -->
     <footer>
       <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-6">
-            <h4>Navigate</h4>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6">
+              <h4>Navigate</h4>
 
-           <div class="mt-4">
-              <div class="foot-item">Support</div>
-             <div class="foot-item">About Us</div>
-              <div class="foot-item">Company News</div>
-              <div class="foot-item">Invest</div>
-              <div class="foot-item">Developer</div>
-              <div class="foot-item">Community</div>
-           </div>
+              <div class="mt-4">
+                <div class="foot-item">Support</div>
+                <div class="foot-item">About Us</div>
+                <div class="foot-item">Company News</div>
+                <div class="foot-item">Invest</div>
+                <div class="foot-item">Developer</div>
+                <div class="foot-item">Community</div>
+              </div>
+            </div>
+            <div class="col-md-6 connect-div">
+              <h4>Connect with us</h4>
 
-          </div>
-          <div class="col-md-6 connect-div">
-            <h4>Connect with us</h4>
-
-            <div class="mt-4 foot-item">Telegram</div>
-             <div class="foot-item">Twitter</div>
+              <div class="mt-4 foot-item">Telegram</div>
+              <div class="foot-item">Twitter</div>
               <div class="mb-5 foot-item">Dischord</div>
 
-               <hr>
+              <hr />
 
-              <span class="foot-item" style="color: #F25E66">Axia Terms and Condition <br> Privacy</span>           
+              <span class="foot-item" style="color: #f25e66"
+                >Axia Terms and Condition <br />
+                Privacy</span
+              >
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6 d-flex justify-content-end white-logo-div">
-        <img class="white-logo" src="./images/white-logo.svg" alt="white-logo" >
-      </div>
+        <div class="col-md-6 d-flex justify-content-end white-logo-div">
+          <img
+            class="white-logo"
+            src="./images/white-logo.svg"
+            alt="white-logo"
+          />
+        </div>
       </div>
     </footer>
     <!-- axia footer section ends here -->
