added style to ipad view

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <h6 class="instru-heading">Our instruments</h6>
 
         <div class="row instru-row">
-          <div class="col-md-6 pr-5">
+          <div class="col-md-6 pr-5 axia-fund">
             <h3 style="color: rgba(28, 41, 59, 1)"><b>Axia Funds</b></h3>
             <p class="instru-content mt-4">
               Automatically diversify your portfolio into <br> funds with a press of
